	  the main usage of the script is for starting things on localhost.  Eventually
	  when ipcluster is able to start things on other hosts, we will put security
	  back.
	* 'cd --foo' searches directory history for string foo, and jumps to that dir.
	  Last part of dir name is checked first. If no matches for that are found,
	  look at the whole path.

Bug fixes
---------

	* The colors escapes in the multiengine client are now turned off on win32 as they
	  don't print correctly.
	* The :mod:`IPython.kernel.scripts.ipengine` script was exec'ing mpi_import_statement
	  incorrectly, which was leading the engine to crash when mpi was enabled.
	* A few subpackages has missing `__init__.py` files.
	* The documentation is only created is Sphinx is found.  Previously, the `setup.py`
	  script would fail if it was missing.
	* Greedy 'cd' completion has been disabled again (it was enabled in 0.8.4)
          

Backwards incompatible changes
------------------------------

* In ipapi, the :func:`make_user_ns` function has been replaced with
  :func:`make_user_namespaces`, to support dict subclasses in namespace
  creation.

	* :class:`IPython.kernel.client.Task` has been renamed
	  :class:`IPython.kernel.client.StringTask` to make way for new task types.
	* The keyword argument `style` has been renamed `dist` in `scatter`, `gather`
	  and `map`.
	* Renamed the values that the rename `dist` keyword argument can have from
	  `'basic'` to `'b'`.
	* IPython has a larger set of dependencies if you want all of its capabilities.
	  See the `setup.py` script for details.
	* The constructors for :class:`IPython.kernel.client.MultiEngineClient` and 
	  :class:`IPython.kernel.client.TaskClient` no longer take the (ip,port) tuple.
	  Instead they take the filename of a file that contains the FURL for that
	  client.  If the FURL file is in your IPYTHONDIR, it will be found automatically
	  and the constructor can be left empty.