@@ -3210,7 +3210,7 @@ Defaulting color scheme to 'NoColor'"""
         This assigns the pasted block to variable 'foo' as string, without 
         dedenting or executing it (preceding >>> and + is still stripped)
         
-        '%cpaste rep' re-executes the block previously entered by cpaste.
+        '%cpaste -r' re-executes the block previously entered by cpaste.
         
         Do not be alarmed by garbled output on Windows (it's a readline bug). 
         Just press enter and type -- (and press enter again) and the block 
@@ -3218,15 +3218,14 @@ Defaulting color scheme to 'NoColor'"""
         
         IPython statements (magics, shell escapes) are not supported (yet).
         """
-        opts,args = self.parse_options(parameter_s,'s:',mode='string')
+        opts,args = self.parse_options(parameter_s,'rs:',mode='string')
         par = args.strip()
-        if par == 'rep':
+        if opts.has_key('r'):
             b = self.user_ns.get('pasted_block', None)
             if b is None:
                 raise UsageError('No previous pasted block available')
             print "Re-executing '%s...' (%d chars)"% (b.split('\n',1)[0], len(b))
             exec b in self.user_ns
-            
             return
         
         sentinel = opts.get('s','--')
